add old frickersolutions site from September 2021

--- a/index.html
+++ b/index.html
@@ -2,12 +2,34 @@
 <html lang="en-US">
     <head>
         <meta charset="utf-8">
-        <title>Terri Fricker</title>
-        <meta name="description" content="Terri Fricker's personal portfolio">
-        <link href="terrifricker.css" rel="stylesheet">
-        <meta name="viewport" content="width=device-width; initial-scale=1.0">
+        <title>Fricker Solutions</title>
+        <meta name="description" content="Got problems? We've got solutions. Web solutions.">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="fricker-solutions.css">
     </head>
     <body>
-        <h1>Terri Fricker</h1>
+        <header>
+            <div class='logo'>
+                <img src="favicon.png" alt="colon, slash, slash"
+                    width="100" height="100">
+            </div>
+            <h1>Fricker Solutions</h1>
+            <nav>
+                <ul class="nav">
+                    <li><a href="#">Demos</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <div id='one'>
+                <div id='two'>two</div>
+                <div id='three'>three</div>
+            </div>
+            
+        </main>
+        <footer></footer>
+        <script src="fricker-solutions.js"></script>
     </body>
 </html>
